<resources>
    <string name="app_name">ulp_lab3_inmobiliaria_cliente</string>
    <string name="title_activity_main">Inmobiliaria</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="nav_header_title">Inmobiliaria Te AlKilo</string>
    <string name="nav_header_subtitle">aavaldez@gmail.com</string>
    <string name="nav_header_desc">Inmobiliaria Te AlKilo</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>

    <string name="menu_home">Ubicación</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_salir">Salir</string>
    <string name="codigo">Código</string>
</resources>